<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvPatientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPatientAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_age"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPatientAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_address"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPatientWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_weight"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPatientBloodPressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_tension"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Medicine Assignment Section -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvMedicineTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penambahan_obat"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spMedicines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/etMedicineQuantity"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:hint="@string/jumlah_obat"
                android:inputType="number" />

            <Button
                android:id="@+id/btnAddMedicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tambah_obat" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!-- Medicine History Section -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvMedicineHistoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/riwayat_obat"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMedicineHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
