<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/viewPatients"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/viewMedications"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/addPatient"
            app:layout_constraintHorizontal_bias="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF03DAC5"
                android:backgroundTint="#FF03DAC5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/patients_icon"
                    android:src="@drawable/ic_patients" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_patients"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/viewMedications"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toEndOf="@id/viewPatients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/addPatient"
            app:layout_constraintHorizontal_bias="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF03DAC5"
                android:backgroundTint="#FF03DAC5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/medications_icon"
                    android:src="@drawable/ic_medications" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_medications"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/addPatient"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPatients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF03DAC5"
                android:backgroundTint="#FF03DAC5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/add_patient_icon"
                    android:src="@drawable/ic_add_patient" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_patient"
                    android:textSize="14sp" />
            </LinearLayout>
    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#FF03DAC5"
        android:text="@string/logout" />

</RelativeLayout>
